# fix-engine

./: .gitignore  CMakeLists.txt  README.md  app  main.cpp
cmake/: FixEngineConfig.cmake.in
examples/: CMakeLists.txt  decode_demo.cpp  session_demo.cpp
include/core/: Field.hpp  FieldTags.hpp  Header.hpp  Message.hpp  MessageType.hpp  Parser.hpp
include/engine/: ISessionHandler.hpp  InMemoryStore.hpp  Session.hpp  SessionConfig.hpp  SessionStore.hpp
include/protocol/fix50/: ApplicationViews.hpp
include/protocol/fixt11/: AdminViews.hpp  Constants.hpp  HeaderTrailerRules.hpp
src/core/: Field.cpp  Message.cpp  Parser.cpp  README.md
src/engine/: InMemoryStore.cpp  README.md
src/protocol/: README.md
src/protocol/fixt11/: HeaderTrailerRules.cpp
tests/: CMakeLists.txt
tests/core/: ParserTests.cpp
tests/engine/: SessionSeqTests.cpp
tests/helpers/: FrameBuilder.cpp  FrameBuilder.hpp
tests/protocol/: ApplicationMessageTests.cpp  HeaderRulesTests.cpp
